// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Article with isPreview Render article with ArticleMetaBanner when isPreview is passed 1`] = `
<div>
  <div>
    <div>
      <div>
        <div>
          <svg
            fill="none"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M22 9.98V19C22 20.1 21.1 21 20 21H4C2.9 21 2 20.1 2 19L2.01 7C2.01 5.9 2.9 5 4 5H14.1C14.04 5.32 14 5.66 14 6C14 6.34 14.04 6.68 14.1 7H4L12 12L15.67 9.71C16.14 10.14 16.69 10.47 17.3 10.69L12 14L4 9V19H20V10.9C20.74 10.75 21.42 10.42 22 9.98ZM16 6C16 7.66 17.34 9 19 9C20.66 9 22 7.66 22 6C22 4.34 20.66 3 19 3C17.34 3 16 4.34 16 6Z"
              fill="black"
            />
          </svg>
          <div>
            Check your inbox
          </div>
        </div>
        <button>
          <svg
            fill="none"
            height="14"
            viewBox="0 0 14 14"
            width="14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M14 1.41L12.59 0L7 5.59L1.41 0L0 1.41L5.59 7L0 12.59L1.41 14L7 8.41L12.59 14L14 12.59L8.41 7L14 1.41Z"
              fill="black"
            />
          </svg>
        </button>
      </div>
      <div>
        <div>
          Verify your email by clicking on the link sent to your inbox.
        </div>
      </div>
    </div>
  </div>
  <div>
    <div>
      <div>
        <label
          htmlFor="ArticleMetaBanner-uuid"
        >
          UUID
          <input
            id="ArticleMetaBanner-uuid"
            name="UUID"
            placeholder="UUID"
            readOnly={true}
            type="text"
            value="198c4b2f-ecec-4f34-be53-c89f83bc1b44"
          />
        </label>
        <button
          data-clipboard-target="#ArticleMetaBanner-uuid"
          type="button"
        >
          Copy
        </button>
      </div>
    </div>
  </div>
  <div
    id="article-marketing-header"
  />
  <article
    data-article-identifier="198c4b2f-ecec-4f34-be53-c89f83bc1b44"
    data-article-sectionname="Some Section"
    data-article-template="mainstandard"
    id="article-main"
  >
    <Head
      articleUrl="https://url.io"
      domainSpecificUrl="https://www.thetimes.co.uk"
      swgProductId={null}
    />
    <div>
      <AdContainer
        slotName="header"
      />
    </div>
    <main>
      <div />
      <article>
        <div>
          <div>
            <p>
              <span>
                T
              </span>
              his being Black History Month, last week
            </p>
            <div>
              <div
                id="d2f83305-d558-4f78-f582-32115c659355"
              >
                <InteractiveWrapper
                  attributes={
                    Object {
                      "chart-id": "csmgb",
                    }
                  }
                  element="times-datawrapper"
                  source="//components.timesdev.tools/lib2/times-datawrapper-1.1.0/times-datawrapper.html"
                />
              </div>
            </div>
            <div
              id="2"
            >
              <div>
                <div>
                  <ArticleImage
                    captionOptions={
                      Object {
                        "caption": "An image caption",
                        "credits": "The image credits",
                      }
                    }
                    imageOptions={
                      Object {
                        "display": "primary",
                        "highResSize": null,
                        "lowResQuality": 3,
                        "lowResSize": 400,
                        "ratio": "1500:1000",
                        "uri": "https://image.io",
                      }
                    }
                  />
                </div>
              </div>
            </div>
            <div
              id="3"
            >
              <div>
                <div>
                  <ArticleImage
                    captionOptions={
                      Object {
                        "caption": "A secondary image caption",
                        "credits": "The secondary image credits",
                      }
                    }
                    imageOptions={
                      Object {
                        "display": "secondary",
                        "highResSize": null,
                        "lowResQuality": 3,
                        "lowResSize": 400,
                        "ratio": "1500:1000",
                        "uri": "https://image.io/secondary",
                      }
                    }
                  />
                </div>
              </div>
            </div>
            <div
              id="4"
            >
              <div>
                <div>
                  <ArticleImage
                    captionOptions={
                      Object {
                        "caption": "An inline image caption",
                        "credits": "The inline image credits",
                      }
                    }
                    imageOptions={
                      Object {
                        "display": "inline",
                        "highResSize": null,
                        "lowResQuality": 3,
                        "lowResSize": 400,
                        "ratio": "1500:1000",
                        "uri": "https://image.io/inline",
                      }
                    }
                  />
                </div>
              </div>
            </div>
            <Link
              target="_blank"
              underlined={true}
              url="https://link.io"
            >
              Some Link
            </Link>
            <span>
              <p
                id="last-paragraph"
              >
                Some content
              </p>
              <div>
                <div>
                  <PullQuote
                    caption="AName"
                    quoteColour="#FF0000"
                    text="a text"
                    twitter="@AName"
                  >
                    The pull quote content
                  </PullQuote>
                </div>
              </div>
              <div>
                <figure>
                  <div>
                    <div>
                      <div
                        data-is-360={false}
                      >
                        <div>
                          <video
                            controls={true}
                            data-account="57838016001"
                            data-application-id={true}
                            data-embed="default"
                            data-player="default"
                            data-video-id="4084164751001"
                            id="4084164751001-57838016001-3dbfe6b8-680b-11e9-b277-88f3d445182c"
                            poster="https://image.io?resize=960"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                  <figcaption>
                    <div>
                      <Caption
                        text="This is video caption"
                      />
                    </div>
                  </figcaption>
                </figure>
              </div>
              <KeyFacts
                ast={
                  Object {
                    "attributes": Object {
                      "title": "Example title",
                    },
                    "children": Array [
                      Object {
                        "children": Array [
                          Object {
                            "children": Array [
                              Object {
                                "attributes": Object {
                                  "value": "Example bullet text",
                                },
                                "children": Array [],
                                "name": "text",
                              },
                            ],
                            "name": "listElement",
                          },
                          Object {
                            "children": Array [
                              Object {
                                "attributes": Object {
                                  "value": "An example ",
                                },
                                "children": Array [],
                                "name": "text",
                              },
                              Object {
                                "attributes": Object {
                                  "href": "https://example.io",
                                  "target": "_blank",
                                  "type": "topic",
                                },
                                "children": Array [
                                  Object {
                                    "attributes": Object {
                                      "value": "link",
                                    },
                                    "children": Array [],
                                    "name": "text",
                                  },
                                ],
                                "name": "link",
                              },
                            ],
                            "name": "listElement",
                          },
                          Object {
                            "children": Array [
                              Object {
                                "attributes": Object {
                                  "value": "More example text.",
                                },
                                "children": Array [],
                                "name": "text",
                              },
                            ],
                            "name": "listElement",
                          },
                          Object {
                            "children": Array [
                              Object {
                                "attributes": Object {
                                  "value": "Example text ",
                                },
                                "children": Array [],
                                "name": "text",
                              },
                              Object {
                                "attributes": Object {},
                                "children": Array [
                                  Object {
                                    "attributes": Object {
                                      "value": "this is bold ",
                                    },
                                    "children": Array [],
                                    "name": "text",
                                  },
                                ],
                                "name": "bold",
                              },
                              Object {
                                "attributes": Object {},
                                "children": Array [
                                  Object {
                                    "attributes": Object {
                                      "value": "this is in italics.",
                                    },
                                    "children": Array [],
                                    "name": "text",
                                  },
                                ],
                                "name": "italic",
                              },
                            ],
                            "name": "listElement",
                          },
                        ],
                        "name": "unorderedList",
                      },
                    ],
                    "name": "keyFacts",
                  }
                }
                headline="Some Headline"
                section="Some Section"
              />
            </span>
            <div
              id="paywall-portal-article-footer"
            />
          </div>
        </div>
        <ArticleExtras
          articleHeadline="Some Headline"
          articleId="198c4b2f-ecec-4f34-be53-c89f83bc1b44"
          articleUrl="https://url.io"
          commentingConfig={
            Object {
              "account": "dummiy-spotim-id",
            }
          }
          commentsEnabled={true}
          domainSpecificUrl="https://www.thetimes.co.uk"
          publishedTime="2015-03-13T18:54:58.000Z"
          relatedArticleSlice={
            Object {
              "items": Array [
                Object {
                  "article": Object {
                    "__typename": "Article",
                    "bylines": Array [],
                    "hasVideo": false,
                    "headline": "RA Headline",
                    "id": "ra-1",
                    "label": "RA Label",
                    "leadAsset": Object {
                      "__typename": "Image",
                      "crop169": Object {
                        "__typename": "Crop",
                        "url": "https://racrop169.io",
                      },
                      "crop32": Object {
                        "__typename": "Crop",
                        "url": "https://racrop32.io",
                      },
                      "title": "RA Title",
                    },
                    "publicationName": "TIMES",
                    "publishedTime": "2015-03-23T19:39:39.000Z",
                    "savingEnabled": true,
                    "sharingEnabled": true,
                    "shortHeadline": "Headline",
                    "shortIdentifier": "2k629tpvh",
                    "slug": "this-is-slug",
                    "summary105": Array [],
                    "summary125": Array [],
                    "summary145": Array [],
                    "summary160": Array [],
                    "summary175": Array [],
                    "summary225": Array [],
                    "url": "https://ra.io",
                  },
                },
              ],
              "sliceName": "StandardSlice",
            }
          }
          relatedArticlesVisible={false}
          savingEnabled={true}
          section="Some Section"
          sharingEnabled={true}
          topics={
            Array [
              Object {
                "name": "Topic",
                "slug": "topic",
              },
            ]
          }
        />
      </article>
    </main>
    <AdContainer
      slotName="pixel"
    />
    <AdContainer
      slotName="pixelteads"
    />
    <AdContainer
      slotName="pixelskin"
    />
  </article>
</div>
`;

exports[`Article with isPreview Render article without ArticleMetaBanner when isPreview is missing 1`] = `
<div>
  <div>
    <div>
      <div>
        <div>
          <svg
            fill="none"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M22 9.98V19C22 20.1 21.1 21 20 21H4C2.9 21 2 20.1 2 19L2.01 7C2.01 5.9 2.9 5 4 5H14.1C14.04 5.32 14 5.66 14 6C14 6.34 14.04 6.68 14.1 7H4L12 12L15.67 9.71C16.14 10.14 16.69 10.47 17.3 10.69L12 14L4 9V19H20V10.9C20.74 10.75 21.42 10.42 22 9.98ZM16 6C16 7.66 17.34 9 19 9C20.66 9 22 7.66 22 6C22 4.34 20.66 3 19 3C17.34 3 16 4.34 16 6Z"
              fill="black"
            />
          </svg>
          <div>
            Check your inbox
          </div>
        </div>
        <button>
          <svg
            fill="none"
            height="14"
            viewBox="0 0 14 14"
            width="14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M14 1.41L12.59 0L7 5.59L1.41 0L0 1.41L5.59 7L0 12.59L1.41 14L7 8.41L12.59 14L14 12.59L8.41 7L14 1.41Z"
              fill="black"
            />
          </svg>
        </button>
      </div>
      <div>
        <div>
          Verify your email by clicking on the link sent to your inbox.
        </div>
      </div>
    </div>
  </div>
  <div
    id="article-marketing-header"
  />
  <article
    data-article-identifier="198c4b2f-ecec-4f34-be53-c89f83bc1b44"
    data-article-sectionname="Some Section"
    data-article-template="mainstandard"
    id="article-main"
  >
    <Head
      articleUrl="https://url.io"
      domainSpecificUrl="https://www.thetimes.co.uk"
      swgProductId={null}
    />
    <div>
      <AdContainer
        slotName="header"
      />
    </div>
    <main>
      <div />
      <article>
        <div>
          <div>
            <p>
              <span>
                T
              </span>
              his being Black History Month, last week
            </p>
            <div>
              <div
                id="d2f83305-d558-4f78-f582-32115c659355"
              >
                <InteractiveWrapper
                  attributes={
                    Object {
                      "chart-id": "csmgb",
                    }
                  }
                  element="times-datawrapper"
                  source="//components.timesdev.tools/lib2/times-datawrapper-1.1.0/times-datawrapper.html"
                />
              </div>
            </div>
            <div
              id="2"
            >
              <div>
                <div>
                  <ArticleImage
                    captionOptions={
                      Object {
                        "caption": "An image caption",
                        "credits": "The image credits",
                      }
                    }
                    imageOptions={
                      Object {
                        "display": "primary",
                        "highResSize": null,
                        "lowResQuality": 3,
                        "lowResSize": 400,
                        "ratio": "1500:1000",
                        "uri": "https://image.io",
                      }
                    }
                  />
                </div>
              </div>
            </div>
            <div
              id="3"
            >
              <div>
                <div>
                  <ArticleImage
                    captionOptions={
                      Object {
                        "caption": "A secondary image caption",
                        "credits": "The secondary image credits",
                      }
                    }
                    imageOptions={
                      Object {
                        "display": "secondary",
                        "highResSize": null,
                        "lowResQuality": 3,
                        "lowResSize": 400,
                        "ratio": "1500:1000",
                        "uri": "https://image.io/secondary",
                      }
                    }
                  />
                </div>
              </div>
            </div>
            <div
              id="4"
            >
              <div>
                <div>
                  <ArticleImage
                    captionOptions={
                      Object {
                        "caption": "An inline image caption",
                        "credits": "The inline image credits",
                      }
                    }
                    imageOptions={
                      Object {
                        "display": "inline",
                        "highResSize": null,
                        "lowResQuality": 3,
                        "lowResSize": 400,
                        "ratio": "1500:1000",
                        "uri": "https://image.io/inline",
                      }
                    }
                  />
                </div>
              </div>
            </div>
            <Link
              target="_blank"
              underlined={true}
              url="https://link.io"
            >
              Some Link
            </Link>
            <span>
              <p
                id="last-paragraph"
              >
                Some content
              </p>
              <div>
                <div>
                  <PullQuote
                    caption="AName"
                    quoteColour="#FF0000"
                    text="a text"
                    twitter="@AName"
                  >
                    The pull quote content
                  </PullQuote>
                </div>
              </div>
              <div>
                <figure>
                  <div>
                    <div>
                      <div
                        data-is-360={false}
                      >
                        <div>
                          <video
                            controls={true}
                            data-account="57838016001"
                            data-application-id={true}
                            data-embed="default"
                            data-player="default"
                            data-video-id="4084164751001"
                            id="4084164751001-57838016001-3dbfe6b8-680b-11e9-b277-88f3d445182c"
                            poster="https://image.io?resize=960"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                  <figcaption>
                    <div>
                      <Caption
                        text="This is video caption"
                      />
                    </div>
                  </figcaption>
                </figure>
              </div>
              <KeyFacts
                ast={
                  Object {
                    "attributes": Object {
                      "title": "Example title",
                    },
                    "children": Array [
                      Object {
                        "children": Array [
                          Object {
                            "children": Array [
                              Object {
                                "attributes": Object {
                                  "value": "Example bullet text",
                                },
                                "children": Array [],
                                "name": "text",
                              },
                            ],
                            "name": "listElement",
                          },
                          Object {
                            "children": Array [
                              Object {
                                "attributes": Object {
                                  "value": "An example ",
                                },
                                "children": Array [],
                                "name": "text",
                              },
                              Object {
                                "attributes": Object {
                                  "href": "https://example.io",
                                  "target": "_blank",
                                  "type": "topic",
                                },
                                "children": Array [
                                  Object {
                                    "attributes": Object {
                                      "value": "link",
                                    },
                                    "children": Array [],
                                    "name": "text",
                                  },
                                ],
                                "name": "link",
                              },
                            ],
                            "name": "listElement",
                          },
                          Object {
                            "children": Array [
                              Object {
                                "attributes": Object {
                                  "value": "More example text.",
                                },
                                "children": Array [],
                                "name": "text",
                              },
                            ],
                            "name": "listElement",
                          },
                          Object {
                            "children": Array [
                              Object {
                                "attributes": Object {
                                  "value": "Example text ",
                                },
                                "children": Array [],
                                "name": "text",
                              },
                              Object {
                                "attributes": Object {},
                                "children": Array [
                                  Object {
                                    "attributes": Object {
                                      "value": "this is bold ",
                                    },
                                    "children": Array [],
                                    "name": "text",
                                  },
                                ],
                                "name": "bold",
                              },
                              Object {
                                "attributes": Object {},
                                "children": Array [
                                  Object {
                                    "attributes": Object {
                                      "value": "this is in italics.",
                                    },
                                    "children": Array [],
                                    "name": "text",
                                  },
                                ],
                                "name": "italic",
                              },
                            ],
                            "name": "listElement",
                          },
                        ],
                        "name": "unorderedList",
                      },
                    ],
                    "name": "keyFacts",
                  }
                }
                headline="Some Headline"
                section="Some Section"
              />
            </span>
            <div
              id="paywall-portal-article-footer"
            />
          </div>
        </div>
        <ArticleExtras
          articleHeadline="Some Headline"
          articleId="198c4b2f-ecec-4f34-be53-c89f83bc1b44"
          articleUrl="https://url.io"
          commentingConfig={
            Object {
              "account": "dummiy-spotim-id",
            }
          }
          commentsEnabled={true}
          domainSpecificUrl="https://www.thetimes.co.uk"
          publishedTime="2015-03-13T18:54:58.000Z"
          relatedArticleSlice={
            Object {
              "items": Array [
                Object {
                  "article": Object {
                    "__typename": "Article",
                    "bylines": Array [],
                    "hasVideo": false,
                    "headline": "RA Headline",
                    "id": "ra-1",
                    "label": "RA Label",
                    "leadAsset": Object {
                      "__typename": "Image",
                      "crop169": Object {
                        "__typename": "Crop",
                        "url": "https://racrop169.io",
                      },
                      "crop32": Object {
                        "__typename": "Crop",
                        "url": "https://racrop32.io",
                      },
                      "title": "RA Title",
                    },
                    "publicationName": "TIMES",
                    "publishedTime": "2015-03-23T19:39:39.000Z",
                    "savingEnabled": true,
                    "sharingEnabled": true,
                    "shortHeadline": "Headline",
                    "shortIdentifier": "2k629tpvh",
                    "slug": "this-is-slug",
                    "summary105": Array [],
                    "summary125": Array [],
                    "summary145": Array [],
                    "summary160": Array [],
                    "summary175": Array [],
                    "summary225": Array [],
                    "url": "https://ra.io",
                  },
                },
              ],
              "sliceName": "StandardSlice",
            }
          }
          relatedArticlesVisible={false}
          savingEnabled={true}
          section="Some Section"
          sharingEnabled={true}
          topics={
            Array [
              Object {
                "name": "Topic",
                "slug": "topic",
              },
            ]
          }
        />
      </article>
    </main>
    <AdContainer
      slotName="pixel"
    />
    <AdContainer
      slotName="pixelteads"
    />
    <AdContainer
      slotName="pixelskin"
    />
  </article>
</div>
`;
